frontend/app/assets/stylesheets/archivesspace/common.less
@import "variables";
@import "mixins";

body {
  position: relative;
}

.form-horizontal {
  // Increase spacing between groups
  .control-group {
    margin-bottom: 8px;
  }
}

h2 > .label {
  margin-top: @baseLineHeight / 2;
  vertical-align: top;
}

.breadcrumb {
  margin-top: -@baseLineHeight;
  #gradient > .vertical(#efefef, #eaeaea);
  padding: 5px 10px;
  .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");

  .return-to-search {
    margin-top: -4px;
  }

}

.navbar .brand {
  text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
  color: black;
  font-weight: bold;
}

.navbar .brand:hover {
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.125);
}

.modal {
  > form {
    margin-bottom: 0;
  }

  &.container {
    .modal-body {
      max-height: none;
    }
    width: ((@gridColumnWidth) * 12) + (@gridGutterWidth * (12 - 1)) - 14;
  }

  &.full {
    width: 98%;
    margin: 0 !important;
    left: 1%;
    top: 1%;
    height: 98%;

    .modal-body {
      max-height: none;
    }
  }

  .modal-footer {
    text-align: left;

    .btn-cancel {
      float: right;
    }
  }
}

@media (min-width: 768px) and (max-width: 979px) {
  .modal {
    &.container {
      width: 92% !important;
    }
  }
}
@media (max-width: 767px) {
  .modal {
    &.container {
      width: 92% !important;
      margin-left: auto !important;
    }
  }
}

.btn-toolbar >.btn-group + .btn-group {
  margin-left: -1px;
}

.btn-toolbar > .btn-group > .btn, 
.btn-toolbar > .btn-group > .dropdown-toggle
{
  .border-radius(0);
}

.btn-toolbar > .btn-group:first-child > .btn, 
.btn-toolbar > .btn-group:first-child > .dropdown-toggle{
  .border-radius(4px);
}

.btn-toolbar > .btn-group:last-child > .btn:last-child, 
.btn-toolbar > .btn-group:last-child > .dropdown-toggle:nth-last-child(2){
  .border-radius(4px);
}

.btn-toolbar > .btn-group {
  &:first-child > .btn:first-child {
    .border-radius(4px 0 0 4px);
  }

  .btn-inline-form .btn {
    .border-radius(0);
  }
  &:first-child .btn-inline-form:first-child .btn {
    .border-radius(4px 0 0 4px);
  }
  .btn-inline-form:last-child .btn {
    .border-radius(0 4px 4px 0);
  }
}

.record-toolbar {
  overflow: hidden;
}

.btn.btn-mini {
  [class^="icon-"], [class*=" icon-"] {
    margin-top: -1px;
  }
}

.btn-busy-icon {
  display: none;
}

.btn-primary.busy.disabled .btn-busy-icon {
  display: inline;
}

.btn .btn-busy-label,
.btn.busy .btn-label {
  display: none;
}

.btn.busy .btn-busy-label {
  display: inline;
}

#object_container {
  position: relative;
}

.label-and-value .span3 {
}

.identifier-display {
  .identifier-display-part {
    border: 1px solid #F6F6F6;
    background-color: #FCFCFC;
    padding: 4px;
    margin-right: 4px;
    min-width: 60px;
    float: left;
    height: @baseLineHeight;
    line-height: @baseLineHeight;
  }
}

.label-only .identifier-display-part {
  margin-top: -6px;
}

.tab-content {
  overflow: visible;
}

.input-append .dropdown-menu, 
.input-prepend .dropdown-menu {
  font-size: @baseFontSize;
}

.dropdown-menu.open-aligned-right {
  left: auto;
  right: 0;
}

.record-toolbar {
  padding: 4px 5px;
  position: relative;
  background-color: #F3F3F3;
  border-top: 1px solid #DDD;
  border-left: 1px solid #DDD;
  #gradient > .vertical(#F3F3F3, #EDEDED);
  .box-shadow(~"1px 1px 2px rgba(0,0,0,.15)");
  min-height: 2em;
  overflow: visible;

  &.formchanged {
    overflow: hidden;
  }

  .btn-toolbar {
    margin: 0;
  }

  .revert-changes {
    display: none;
  }

  &.formchanged {
    .revert-changes {
      display: block;
    }
  }
}

.record-pane {
  padding: 10px;
  margin: 0;
  border: 1px solid #EEE;
  border-top: none;

  h2 {
    margin-top: 0;
  }

  section {
    overflow: hidden;
  }
}

.dropdown-submenu a:focus .dropdown-menu {
  display: block;
}

.nav-list {
  .alert-error a {
    .transition(~"background-color 1s, color 1s");
  }
}

.nav-list .form-actions {
  margin: 0;
  padding: 10px !important;
  border: 1px solid #E5E5E5;
  .border-radius(0 0 4px 4px);

  .btn-primary {
    width: 100%;
  }

  .btn-cancel {
    width: auto;
    float: right;
    padding: 4px 14px;
  }
}

/* accordion styles */
.accordion {
  &.details {
    .accordion-body {
      background-color: #fafafa;      
      &.in {
        padding-top: 8px;
        border-top: 1px solid #E5E5E5;
      }
    }
  }
  .accordion-body.collapse {
    border-top: none;
  }
  .accordion-toggle {
    .icon-chevron-down {
      display: block;
    }
    .icon-chevron-right {
      display: none;
    }
    &.row-fluid {
      padding-bottom: 0;
    }
    &.collapsed {
      .icon-chevron-down {
        display: none;
      }
      .icon-chevron-right {
        display: block;
      }
    }
  }
}

.action-show {
  section section {
    margin: 0 20px;
  }
}

/* fix typeahead not displaying above modal blockout */
.typeahead.dropdown-menu {
  z-index: 1099;
}

.pagination {
  margin: 0;
}

.table {
  margin-bottom: 5px;
}

/* Context Help related styles */
.context-help {
  .context-help-icon {
    .transition(opacity 0.5s);
    .opacity(30);
  }

  &:hover {
    .context-help-icon {
      .transition(opacity 0.5s);
      .opacity(100);
    }
  }
}
h3 > .context-help {
  float: right;
  margin: 6px 6px 0 0;
}

h4 > .context-help {
  float: right;
  margin: 2px 6px 0 0;
}

.record-pane > .context-help {
  float: right;
}
/* Tooltip overrides */
.tooltip-inner {
  text-align: left;
  line-height: @baseLineHeight;
  font-weight: normal;

  .tooltip-close {
    float: right;
    margin-left: 5px;
    margin-bottom: 5px;
    cursor: pointer;
  }
}

/* inset label */
.inset-label {
  padding: 0 10px;
  height: 30px;
  display: inline-block;
  margin: 5px 0 -5px !important;
  .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
  #font > .sans-serif(13px, normal, 30px);
  margin-bottom: 0;
  background-color: #e9e9e9;
  overflow: hidden;
  max-width: 200px;
  .border-radius(4px);
}

.input-append {
  .inset-label {
    .box-shadow("inset -2px 0px 3px #CCC");
    .border-radius(4px 0 0 4px);
  }
}

.record-pane .inset-label {
  margin: 0 !important;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
}

.btn-mini > .caret {
  margin-top: 8px;
}

/* import stats */

#import-results {
}

#import-results .import-results-row p{
  margin-bottom: 2px;
}

.import-errors {
  background-color: #FF0000;
}

#import-results progress {
  width: 20em;
}

/* i-frame import workaround  */

.import-iframe {
  margin-top: 1em;
  width: 100%;
  height: 500px;
  border: none;
}


.progress {
  overflow: visible;
  margin-bottom: 50px;
  width: 100%;
}

div.progress-bar {
  height: 10px;
  background-color: #0088CC;
}

.progress .progress-percent {
  float: right;
  margin-right: 5%;
}

div.progress-container {
  width: 20em;
  height: 20px;
  border: 1px solid black;
}

.audit-display-compact {
  padding: 4px;
  margin-right: 4px;
  min-width: 60px;
  float: left;
}

.audit-display-wide {
  border: 1px solid #F6F6F6;
  background-color: #F1F1F1;
  padding: 4px;
  margin-right: 4px;
  float: right;
  line-height: @baseLineHeight;
}

/* end i-frame import workaround */

